=== master

* Support treat_string_list_as_untyped_array Database option in pg_auto_parameterize_in_array extension (jeremyevans)

=== 5.90.0 (2025-03-01)

* Avoid one query per enum when loading pg_enum extension when pg_array extension is already loaded (nick96) (#2278, #2279)

* Automatically load the sql_comments Database extension when loading the sql_comments model plugin (jeremyevans) (#2276)

* Support :pg_auto_parameterize_min_array_size Database option in pg_auto_parameterize_in_array extension to control minimum array size to handle (jeremyevans)

* Add pg_eager_any_typed_array plugin, automatically transform eager loads to use = ANY(array_expr::type[]) instead of IN (value_list) (jeremyevans)

* Support :eager_loading_predicate_transform association option (jeremyevans)

* Support explicitly specifying :use_placeholder_loader association option (jeremyevans)

* Make SQL::BooleanExpression.from_value_pairs handle Dataset::PlaceholderLiteralizer::Argument with existing transformer correctly (jeremyevans)

* Make connection_validator extension not swallow exceptions raised by Database#valid_connection? (jeremyevans)

* Do not call Model.name while holding a mutex when setting temporary names for anonymous modules (jeremyevans) (#2273)

=== 5.89.0 (2025-02-01)

* Make connection_validator extension handle case where Database#valid_connection? raises an exception (jeremyevans)

* Support :compare_connections_by_identity Database option to work around bugs in other libraries or the ruby implementation (jeremyevans) 

* Make mysql2 adapter handle invalid statement handles when closing prepared statements (jeremyevans)

* Add query_blocker extension, for blocking queries inside a block (jeremyevans)

* Support alter_table add_primary_key/add_unique_constraint :using_index option on PostgreSQL 9.1+ (jeremyevans)

* Add temporary names for internally defined anonymous classes and modules on Ruby 3.3+ (jeremyevans)

=== 5.88.0 (2025-01-01)
